<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <groupId>de.setsoftware.reviewtool</groupId>
  <artifactId>workspaceReviewtool</artifactId>
  <version>1.30.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <properties>
    <tycho.version>1.2.0</tycho.version>
    <tycho.testArgLine>-Duser.timezone=Europe/Berlin</tycho.testArgLine>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>

  <repositories>
    <!--<repository>
      <id>mars</id>
      <url>${mars-repo.url}</url>
      <layout>p2</layout>
    </repository>-->
    <repository>
      <id>neon</id>
      <url>http://download.eclipse.org/releases/neon</url>
      <layout>p2</layout>
    </repository>
  </repositories>

  <build>
    <plugins>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-maven-plugin</artifactId>
        <version>${tycho.version}</version>
        <extensions>true</extensions>
      </plugin>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>target-platform-configuration</artifactId>
        <version>${tycho.version}</version>
        <configuration>
          <environments>
            <environment>
              <os>linux</os>
              <ws>gtk</ws>
              <arch>x86</arch>
            </environment>
            <environment>
              <os>linux</os>
              <ws>gtk</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>win32</os>
              <ws>win32</ws>
              <arch>x86</arch>
            </environment>
            <environment>
              <os>win32</os>
              <ws>win32</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>macosx</os>
              <ws>cocoa</ws>
              <arch>x86_64</arch>
            </environment>
          </environments>
        </configuration>
      </plugin>
     </plugins>

    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>3.1.1</version>
          <executions>
            <execution>
              <id>dependencies</id>
              <phase>generate-resources</phase>
              <goals>
                <goal>copy-dependencies</goal>
              </goals>
              <configuration>
                <outputDirectory>${project.build.directory}/lib</outputDirectory>
              </configuration>
            </execution>
            <execution>
              <id>src-dependencies</id>
              <phase>package</phase>
              <goals>
                <goal>copy-dependencies</goal>
              </goals>
              <configuration>
                <classifier>sources</classifier>
                <outputDirectory>${project.build.directory}/sources</outputDirectory>
                <failOnMissingClassifierArtifact>false</failOnMissingClassifierArtifact>
              </configuration>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-checkstyle-plugin</artifactId>
          <version>3.1.1</version>
          <dependencies>
            <dependency>
              <groupId>com.puppycrawl.tools</groupId>
              <artifactId>checkstyle</artifactId>
              <version>8.29</version>
            </dependency>
            <dependency>
              <groupId>de.setsoftware.reviewtool</groupId>
              <artifactId>build-tools</artifactId>
              <version>1.30.0-SNAPSHOT</version>
            </dependency>
          </dependencies>
          <executions>
            <execution>
              <phase>verify</phase>
              <goals>
                <goal>check</goal>
              </goals>
            </execution>
          </executions>
          <configuration>
            <configLocation>analysis/checkstyle.xml</configLocation>
            <encoding>UTF-8</encoding>
            <consoleOutput>true</consoleOutput>
            <failOnViolation>true</failOnViolation>
            <violationSeverity>warning</violationSeverity>
            <sourceDirectories>
              <sourceDirectory>${project.basedir}/src</sourceDirectory>
            </sourceDirectories>
            <!--<failsOnError>true</failsOnError>
            <linkXRef>false</linkXRef>-->
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.bithill</groupId>
          <artifactId>classycle-maven-plugin</artifactId>
          <version>0.5</version>
          <executions>
            <execution>
              <id>verify</id>
              <phase>verify</phase>
              <goals>
                <goal>check</goal>
              </goals>
              <configuration>
                <dependencyDefinition>
                show allResults
                {package} = de.setsoftware.reviewtool
                check absenceOfPackageCycles > 1 in ${package}.*
                </dependencyDefinition>
                <!--<resultRenderer>classycle.dependency.XMLResultRenderer</resultRenderer>-->
              </configuration>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <modules>
    <module>build-tools</module>
    <module>de.setsoftware.reviewtool.reviewdata</module>
    <module>de.setsoftware.reviewtool.ordering</module>
    <module>de.setsoftware.reviewtool.ordering.tests</module>
    <module>de.setsoftware.reviewtool.core</module>
    <module>de.setsoftware.reviewtool.tests</module>
    <module>de.setsoftware.reviewtool.changesources.git</module>
    <module>de.setsoftware.reviewtool.changesources.git.tests</module>
    <module>de.setsoftware.reviewtool.changesources.svn</module>
    <module>de.setsoftware.reviewtool.changesources.svn.tests</module>
    <module>de.setsoftware.reviewtool.ticketconnectors.file</module>
    <module>de.setsoftware.reviewtool.ticketconnectors.jira</module>
    <module>de.setsoftware.reviewtool.reminder</module>
    <module>de.setsoftware.reviewtool.feature</module>
    <module>de.setsoftware.reviewtool.updatesite</module>
  	<module>de.setsoftware.reviewtool.summary</module>
  </modules>
</project>
